// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericField renders text as TextInput 1`] = `
<TextField
  disabled={false}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  name="field-name"
  required={true}
  type="text"
/>
`;

exports[`GenericField renders text with choices as SelectCreatableField 1`] = `
<SelectCreatableField
  choices={Array []}
  clearable={true}
  deprecatedSelectControl={true}
  disabled={false}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  multiple={false}
  name="field-name"
  required={true}
  type="text"
/>
`;
